--- a/app/globals.css
+++ b/app/globals.css
@@ -221,6 +221,7 @@ html, body {
 /* Default cursor is normal, grab when panning */
 .react-flow__pane {
   cursor: default !important;
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.6) !important;
 }
 
 .react-flow__pane:active {
